# ChangeLog for dev-ruby/daemons
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/ChangeLog,v 1.39 2009/12/09 17:38:37 ranger Exp $

  09 Dec 2009; Brent Baude <ranger@gentoo.org> daemons-1.0.10.ebuild:
  Marking daemons-1.0.10 ppc64 for bug 240375

  23 Aug 2009; Alex Legler <a3li@gentoo.org> +daemons-0.4.2.ebuild:
  Readding 0.4.2 to staisfy a dependency ba dev-ruby/nitro

  22 Aug 2009; Hans de Graaff <graaff@gentoo.org> -daemons-0.4.2.ebuild:
  Remove old version.

  09 Oct 2008; Raúl Porcel <armin76@gentoo.org> daemons-1.0.10.ebuild:
  ia64 stable wrt #240375

  08 Oct 2008; Markus Meier <maekke@gentoo.org> daemons-1.0.10.ebuild:
  amd64/x86 stable, bug #240375

  07 Oct 2008; Friedrich Oslage <bluebird@gentoo.org> daemons-1.0.10.ebuild:
  Stable on sparc, bug #240375

  07 Oct 2008; nixnut <nixnut@gentoo.org> daemons-1.0.10.ebuild:
  Stable on ppc wrt bug 240375

  07 Oct 2008; Hans de Graaff <graaff@gentoo.org> -daemons-1.0.7.ebuild,
  -daemons-1.0.9.ebuild:
  Remove old versions

  13 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +daemons-0.4.2.ebuild:
  resurrect daemons-0.4.2.ebuild which is still being used

*daemons-1.0.10 (13 Aug 2008)

  13 Aug 2008; Hans de Graaff <graaff@gentoo.org> -daemons-0.4.2.ebuild,
  -daemons-0.4.3.ebuild, -daemons-0.4.4.ebuild, -daemons-1.0.4.ebuild,
  +daemons-1.0.10.ebuild:
  Version bump. Remove old versions.

*daemons-1.0.9 (10 Nov 2007)

  10 Nov 2007; Hans de Graaff <graaff@gentoo.org> +daemons-1.0.9.ebuild:
  Version bump as per #198507, thanks to Jochen Schalanda.
  
    * New Pid.running? function.

  03 Nov 2007; Samuli Suominen <drac@gentoo.org> daemons-0.4.2.ebuild:
  Keyword ~amd64 wrt #185492.

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  daemons-1.0.5.ebuild:
  ppc stable, bug #185266

  19 Jul 2007; Christoph Mende <angelos@gentoo.org> daemons-1.0.5.ebuild:
  Stable on amd64 wrt bug #185266
