@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST daemons-0.4.2.gem 26624 RMD160 f91fbf37546155e99a5d9ea7dd49c4bfd3d91d51 SHA1 9e88ed81bf030c2082102cffb77d39f7306f4bf9 SHA256 7d4356fc260b6357bfc29d6dd37487498d0c4ca5faa8c7943c5e8233fda48fdb
 DIST daemons-1.0.10.gem 31232 RMD160 cee32913a4be62e308e1ae0f61edf869f45a0566 SHA1 61ad4530249aab8c87c833757127cb593815b88c SHA256 a5c21d1f804a22cd3ed5106827817bb61f31ffea92e31612d89c9306add23a0f
+DIST daemons-1.0.10.tgz 30468 RMD160 1d0f57832d8e62b711f7018054c83638cf24ccb2 SHA1 377f3c04a0d480fd81ed670614a42d455723d941 SHA256 acb9532ef9525453962fa16f665c6aa96bf55d79bbcc789b64f1915f9f6d3c0d
 DIST daemons-1.0.5.gem 30208 RMD160 31e32887d46413197e77757489ea181430dc243e SHA1 0b4f1adcd0693adc7877c15ef2be7318495a541e SHA256 04d1e353ed7be25a845e08c9862097001b6f1ff28cfba8345268fe648f6ec3ac
 EBUILD daemons-0.4.2.ebuild 434 RMD160 8dd728b371837adc27ec93bdb5c968a8aee2ad4d SHA1 365074cf6710dd0cc2a1dc1181d37b32796fefe9 SHA256 5329fd98b550e7e3e878114c40363acf3f1de144002fdbea9d95bc718150146c
+EBUILD daemons-1.0.10-r1.ebuild 871 RMD160 420f453be8bae6b18530b38ac6a2dd312a9fd967 SHA1 61e7ac1c4c6fb83b1ee3807301f3bceea9551839 SHA256 3a2eb7cd2b0ee74d29ec3a9544f8abaf438455004b4fe6ec6ea0847cd3a2095e
 EBUILD daemons-1.0.10.ebuild 429 RMD160 f8aa773539d2c7c2cbf66b3435721d76f89ba989 SHA1 b135b09173c75ccb697e3fd3c7756c65fdf6c284 SHA256 58614691ee21f12fe6da28bd1a4c603112446bd74ed8e717adfa76cb603c5f83
 EBUILD daemons-1.0.5.ebuild 500 RMD160 470f64b0bd7adb08fe97d1a3bbab0d10ac3617ee SHA1 5d253ffb1cdb4f77959505f5f1fee134e532231b SHA256 fb102a0ec22e6063ecf8398699a253cbd8b5680674d7b3e10cf2e1b5274510f9
-MISC ChangeLog 4968 RMD160 56f3d4169e073a77bce073172a466e1390bdb753 SHA1 388f1204a417d0f84ccbe579c094f29a21c34bff SHA256 ce49c333b65498f29f7af20cec48a86e2e8c642ab95285a69e59fc72da56d603
+MISC ChangeLog 5142 RMD160 ade388c054fd7c79c5ea57c4546f9e1a8c9c548d SHA1 df0ba41695a409b35526d4f614e8d9346b27d768 SHA256 f954c25da2c9d9727d5c37f4fadfa25feca2044e270aad88bdbe37b440c55f6b
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAks3nMsACgkQTEkQYPgooqGCqwCeOfB2EyU+ItkNitalLc+qnCrD
+xRoAoN7yYIZinzeNOlwTskHGFOqeiXxH
+=WgCk
+-----END PGP SIGNATURE-----
