@@ -1,0 +1,33 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/daemons-1.0.10-r1.ebuild,v 1.1 2009/12/27 17:43:28 a3li Exp $
+
+EAPI="2"
+USE_RUBY="ruby18 ruby19"
+
+RUBY_FAKEGEM_EXTRADOC="Releases README TODO"
+RUBY_FAKEGEM_DOCDIR="html"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Wrap existing ruby scripts to be run as a daemon"
+HOMEPAGE="http://daemons.rubyforge.org/"
+SRC_URI="mirror://rubyforge/${PN}/${P}.tgz"
+
+LICENSE="|| ( Ruby GPL-2 ) MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="examples"
+
+all_ruby_prepare() {
+	sed -i -e '/manage_gems/s:^:#:' Rakefile || die "Fixing Rakefile failed"
+}
+
+all_ruby_install() {
+	all_fakegem_install
+
+	use examples || return
+
+	insinto /usr/share/doc/${PF}/
+	doins -r examples || die "Failed to install examples"
+}
